--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ services:
   - docker
 
 before_install:
+  - docker build -f src/Dockerfile . -t test
   - docker build -t test-service .
   - sudo apt-get -qq update
   - sudo apt-get install -y poppler-utils
 
 script:
-  - docker run -P test-service -q google.com - - > test.pdf 
+  - docker run -P test-service -q google.com - - > test.pdf
   - pdftotext -layout test.pdf - | grep -q Google
