--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ services:
   - docker
 
 before_install:
-  - docker build -t test-service .
+  - docker build -f src/Dockerfile . -t madnight/alpine-wkhtmltopdf-builder:0.12.5-alpine3.10
+  - docker build -t madnight/alpine-wkhtmltopdf .
   - sudo apt-get -qq update
   - sudo apt-get install -y poppler-utils
 
 script:
-  - docker run -P test-service -q google.com - - > test.pdf 
+  - docker run -P madnight/alpine-wkhtmltopdf -q google.com - - > test.pdf
   - pdftotext -layout test.pdf - | grep -q Google
