--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ before_install:
     --cache-from madnight/alpine-wkhtmltopdf-builder:0.12.5-alpine3.10
     -f src/Dockerfile .
     -t madnight/alpine-wkhtmltopdf-builder:0.12.5-alpine3.10
+    -t madnight/alpine-wkhtmltopdf-builder:0.12.5-alpine3.10-"$TRAVIS_JOB_ID"
   - docker push madnight/alpine-wkhtmltopdf-builder:0.12.5-alpine3.10
+  - docker push madnight/alpine-wkhtmltopdf-builder:0.12.5-alpine3.10-"$TRAVIS_JOB_ID"
   - docker build -t madnight/alpine-wkhtmltopdf .
   - sudo apt-get -qq update
   - sudo apt-get install -y poppler-utils
